# geometry

./: CMakeLists.txt  README.md  python_module.cpp
.github/workflows/: test.yml
tests/: test_se2.py  test_se3.py  test_so2.py  test_so3.py
